[package]
name = "xrpl"
version = "0.1.0"
edition = "2024"

[lib]
name = "xrpl"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
bs58 = { version = "0.5.0", default-features = false, features = [
    "check",
    "alloc",
] }
ripple-keypairs = "0.1.0"
hex = "0.4.3"
sha2 = "0.10.9"
ed25519-dalek = "2.0"
ripemd = "0.1.3"
strum = { version = "0.26.3", default-features = false }
strum_macros = { version = "0.26.4", default-features = false }
secp256k1 = { version = "0.30.0", default-features = false, features = [
    "alloc",
] }
crypto-bigint = { version = "0.5.1" }